2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Finish ejabberd_c2s conversion with the
	functions related to offline stanzas.

2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: The handle_info clause that treats routing
	order is now converted. In-memory sets and dict still use the short
	JID form with empty strings for unspecified fields. Users are able to
	connect to ejabberd but some features don't seem to work proprerly.

	* src/ejabberd_c2s.erl: Use the new exmpp_stream:opening_reply/3
	function in wait_for_stream/2. The function terminate/3 is converted
	to exmpp.

	* src/ejabberd_c2s.erl: Convert all presence-related functions.

2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl (session_established): Convert JID to the
	expected form outside of the C2S (empty fields must be set to the
	empty string). This fixes the broken routing.

2008-06-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/configure, src/aclocal.m4, src/Makefile.in: Add exmpp detection.

	* src/ejabberd_receiver.erl: Enable the new #xmlel record.

	* src/ejabberd_c2s.erl: First bunch of modifications to use exmpp. All
	FSM state function are updated. But other functions are not for now.
	Users are able to connect to ejabberd but some features may not work.

	* src/ejabberd_c2s.erl: Change the usage of #state.lang somewhat.
	Fix value of DefaultLang: it doesn't contain the whole serialized
	attribute. Use exmpp_jid:make_bare_jid/2 more.

2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_receiver.erl: Replace the use of xml_stream by
	exmpp_xmlstream. exmpp_xml is configured to produce old #xmlelement
	records. exmpp_xmlstream is configured to send old xmlstreamstart
	tuple. Users are able to connect to ejabberd. Next step:
	ejabberd_c2s.

2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Start the transition to exmpp.
